<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">우리집재활용</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="change_psw">비밀번호 변경</string>
    <string name="join">회원가입</string>
    <string name="AutoLogin">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="plz_input_email">이메일을 입력해주세요</string>
    <string name="logo">logo</string>
    <string name="back">back</string>
    <string name="plz_agree">우리집재활용 서비스를 이용하기 위한 필수 이용약관에\n동의해주세요.</string>
    <string name="allAgree">이용약관 전체 동의</string>
    <string name="detail">detail</string>
    <string name="termsOfUse">이용약관(필수)</string>
    <string name="personal_information_title">개인정보처리방침</string>
    <string name="gotoAuth">본인 인증하기</string>
    <string name="check">확인</string>
    <string name="just_name">이름</string>
    <string name="phone">연락처</string>
    <string name="history">history</string>
    <string name="et">\@</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="eripple_info">우리집재활용정보</string>
    <string name="history_ko">기록</string>
    <string name="point_ko">포인트</string>
    <string name="setting_ko">설정</string>
    <string name="more">more</string>
    <string name="alarm">alarm</string>
    <string name="bookmark">bookmark</string>
    <string name="event">이벤트</string>
    <string name="bank_account_number">계좌번호</string>
    <string name="input_bank_account">계좌번호를 입력해 주세요</string>
    <string name="choose_bank">은행선택</string>
    <string name="newPassword">새 비밀번호</string>
    <string name="input_password">비밀번호를 입력해주세요</string>
    <string name="newPasswordConfirm">새 비밀번호 확인</string>
    <string name="next_ko">다음</string>
    <string name="search">검색</string>
    <string name="share">share</string>
    <string name="present_point">포인트 현황</string>
    <string name="exchange_history">환전 내역</string>
    <string name="exchange">exchange</string>
    <string name="findPsw">비밀번호 찾기</string>
    <string name="forgotPsw">비밀번호를 잊어버리셨나요?</string>
    <string name="goto_auth">본인인증 하기</string>
    <string name="info_auth_psw">본인 인증 후 비밀번호 변경이 가능합니다.</string>
    <string name="phoneHint">\'-\' 빼고 입력</string>
    <string name="more_view">더 보기</string>
    <string name="home_ko">홈</string>
    <string name="location">위치</string>
    <string name="history_my_point">포인트 적립 내역</string>
    <string name="today">오늘</string>
    <string name="yesterday">어제</string>
    <string name="week">일주일</string>
    <string name="month">한달</string>
    <string name="total">전체</string>
    <string name="collectAmount">수거량</string>
    <string name="saving_point">적립포인트</string>
    <string name="haveNoPoint">이런, 아직 포인트 적립을 하지 않으셨군요!</string>
    <string name="share_ko">공유하기</string>
    <string name="haveAGoodDay">오늘도 즐거운 하루 되세요!</string>
    <string name="can_not_assigned_permission">권한을 받지 못했습니다.</string>
    <string name="company_name">자연하리</string>
    <string name="bookmark_ko">즐겨찾기</string>
    <string name="notice">공지사항</string>
    <string name="faq">FAQ</string>
    <string name="setting_account">계정설정</string>
    <string name="setting_alarm">알림설정</string>
    <string name="phone_inquiry">전화 문의</string>
    <string name="inquiry_time">Mon-Fri | AM 10 ~ PM 5</string>
    <string name="inquiry_time_title">상담시간</string>
    <string name="inquiry_kakao">카카오톡 문의</string>
    <string name="image">image</string>
    <string name="newImage">newImage</string>
    <string name="event_img">event_img</string>
    <string name="eripple_bookmark">우리집재활용 즐겨찾기</string>
    <string name="bank_edit">환전계좌 등록/수정</string>
    <string name="logout">로그아웃</string>
    <string name="account_out">회원탈퇴</string>
    <string name="account_setting">계정설정</string>
    <string name="bank_account_edit">환전 계좌 등록 / 수정</string>
    <string name="registerAndEdit">등록 / 수정</string>
    <string name="input_name_plz">이름을 입력해주세요</string>
    <string name="allSavePoint">총 적립 포인트</string>
    <string name="current_my_point">현재 보유 포인트</string>
    <string name="possible_point">환전 가능한 포인트</string>
    <string name="exchange_cancel_cause">환전취소사유:</string>
    <string name="apply_exchange">환전신청</string>
    <string name="alarm_ko">알림</string>
    <string name="select_bank">은행선택</string>
    <string name="bank_icon">bank icon</string>
    <string name="kakaoAppKey">edd624c671b363606c7502a9d09ae6b7</string>
    <string name="kakaoChatId">_xhcvtb</string>
    <string name="cancel">취소</string>
    <string name="plzAddBookmark">즐겨찾기를 추가해주세요.</string>
</resources>