<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.main.setting.account.bank.BankEditFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.eripple.Toolbar.WithArrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bank_account_edit"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/account_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/applesdgothicneob"
        android:text="@string/bank_account_number"
        android:textColor="@color/defaultBlackTextColor"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/account_number_edit"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/round_8dp_edit_bg"
        android:hint="@string/input_bank_account"
        android:inputType="number"
        android:paddingStart="17dp"
        android:textSize="15sp"
        android:textColor="@color/defaultBlackTextColor"
        android:textColorHint="@color/defaultEditHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_number"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/select_bank_txv"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="44dp"
        android:gravity="center_vertical"
        android:text="@string/choose_bank"
        android:textColor="@color/defaultBlackTextColor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_right_arrow_black_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_number_edit" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="38dp"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/registerAndEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>