<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.account.findpsw.FindPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        style="@style/Widget.eripple.Toolbar.WithArrow"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--<ImageButton
            android:id="@+id/back_imb"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:background="@null"
            android:contentDescription="@string/back"
            android:scaleType="center"
            android:src="@drawable/ic_back_icon" />-->

        <TextView
            style="@style/Text.Default.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/findPsw"
            android:textColor="@color/defaultBlackTextColor"
            android:textSize="17sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/forgot_psw"
        style="@style/Text.Default.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/forgotPsw"
        android:textColor="@color/defaultBlackTextColor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/info_auth_psw"
        style="@style/Text.Default.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/info_auth_psw"
        android:textColor="@color/subTextColor"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/forgot_psw"
        app:layout_constraintTop_toBottomOf="@id/forgot_psw" />

    <Button
        android:id="@+id/auth_txv"
        android:fontFamily="@font/applesdgothicneob"
        android:includeFontPadding="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_default_button"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/goto_auth"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/info_auth_psw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>