<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.main.setting.account.outaccout.OutAccountFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.eripple.Toolbar.WithArrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/account_out"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/applesdgothicneob"
                android:text="@string/just_name"
                android:textColor="@color/defaultBlackTextColor"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:autofillHints="no"
                android:background="@drawable/round_8dp_edit_bg"
                android:hint="@string/input_name_plz"
                android:inputType="textPersonName"
                android:paddingStart="17dp"
                android:textSize="15sp"
                android:textColor="@color/defaultBlackTextColor"
                android:textColorHint="@color/defaultEditHintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_txv"
                tools:ignore="RtlSymmetry,TextFields" />


            <TextView
                android:id="@+id/phone_txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/applesdgothicneob"
                android:text="@string/phone"
                android:textColor="@color/defaultBlackTextColor"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_edit" />

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:autofillHints="no"
                android:background="@drawable/round_8dp_edit_bg"
                android:hint="@string/phoneHint"
                android:inputType="date"
                android:paddingStart="17dp"
                android:textSize="15sp"
                android:textColor="@color/defaultBlackTextColor"
                android:textColorHint="@color/defaultEditHintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_txv"
                tools:ignore="RtlSymmetry,TextFields" />


            <TextView
                android:id="@+id/password_txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/applesdgothicneob"
                android:text="@string/password"
                android:textColor="@color/defaultBlackTextColor"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_edit" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:autofillHints="no"
                android:background="@drawable/round_8dp_edit_bg"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:paddingStart="17dp"
                android:textSize="15sp"
                android:textColor="@color/defaultBlackTextColor"
                android:textColorHint="@color/defaultEditHintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_txv"
                tools:ignore="RtlSymmetry"/>

            <Button
                android:id="@+id/account_out_btn"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="38dp"
                android:elevation="0dp"
                android:gravity="center"
                android:text="@string/account_out"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintTop_toBottomOf="@id/password_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>